Closed
Bug 478862
Opened 16 years ago
Closed 16 years ago
After Bugfix 347185 the keys Backspace and Tab no longer work as expected in a flash application
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9.2a1
People
(Reporter: gerd.flender, Assigned: masayuki)
References
()
Details
(Keywords: flashplayer, regression, verified1.9.1)
Attachments
(1 file)
722 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.9.1b2) Gecko/20081201 Firefox/3.1b2
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.9.1b3pre) Gecko/20090216 Firefox/3.1b3pre
The fix for bug 347185 gives a new problem:
With the actual nightly (firefox-3.1b3pre.de.win32.installer.exe from 2009-02-16) I have the problem that the special keys TAB and
BACKSPACE no longer work in a flash application as expected.
TAB leads away from the flash application to the browser URL window and
BACKSPACE goes back one page in the browser (like you hit the back button).
You can verify that at the above mentioned page:
http://g.ho.st/vc.html
With former versions that worked fine.
Reproducible: Always
Steps to Reproduce:
1. open the above mentioned URL http://g.ho.st/vc.html
2. enter cursor in ID or password field
3. enter something
4. press BACKSPACE OR TAB
Actual Results:
TAB leads away from the flash application to the browser URL window and
BACKSPACE goes back one page in the browser (like you hit the back button).
Expected Results:
TAB should focus the next field in the flash application
BACKSPACE should only delete the last entered character
See also Bug 347185
Reporter | ||
Updated•16 years ago
|
Keywords: flashplayer
Version: unspecified → 3.1 Branch
Updated•16 years ago
|
Assignee | ||
Comment 1•16 years ago
|
||
I'm not sure this is our bug. Because:
1. I cannot reproduce the backspace issue.
2. I cannot reproduce this bug on other site.
Reporter | ||
Comment 2•16 years ago
|
||
Hmm, maybe it's a problem with Openlaszlo.
It worked before the bugfix 347185.
Another requirement seems to be wmode="transparent" as it was for bug 347185
Do you see the tab problem on the above mentioned site?
The backspace issue occurs of course only if there is a page to which you can go back.
Assignee | ||
Comment 3•16 years ago
|
||
ok, we should stop propagation of keypress events for compatibility.
Assignee: nobody → masayuki
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #362748 -
Flags: superreview?(roc)
Attachment #362748 -
Flags: review?(roc)
Assignee | ||
Comment 4•16 years ago
|
||
We should fix this regression.
Updated•16 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P2
Comment 5•16 years ago
|
||
Plug-in may want to leave focus when TAB key is pressed (see bug 93149.)
Probably we will need a new NPAPI variable to determine whether we can trust a return value from NPP_HandleEvent().
I have seen in the past month or so in the branch nightlies, that the left and right arrow keys skip over 2 characters instead of one in some flash objects
Also the home and end keys move to the top and bottom of the page, as well as the beginning and end of the line of text in the flash object. When really the latter behavior should only be happening when the flash object has focus.
Assignee | ||
Comment 7•16 years ago
|
||
Kimura-san, you're right for the accessibility. But it should not be the scope of this bug and bug 272847. Because we should fix only "IME accessibility problem of windowless mode" and "some non-US keyboard layout accessibility problem of windowless mode".
And also we need to fix most regressions on the branch by low risk patch.
Attachment #362748 -
Flags: superreview?(roc)
Attachment #362748 -
Flags: superreview+
Attachment #362748 -
Flags: review?(roc)
Attachment #362748 -
Flags: review+
Assignee | ||
Comment 8•16 years ago
|
||
landed to trunk.
http://hg.mozilla.org/mozilla-central/rev/35d78a340566
I'll land to 1.9.1 branch several days later.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [c-n: baking for 1.9.1]
Target Milestone: --- → mozilla1.9.2a1
Assignee | ||
Comment 9•16 years ago
|
||
landed to 191branch too.
http://hg.mozilla.org/releases/mozilla-1.9.1/rev/4ad8a3b961e1
Keywords: fixed1.9.1
Whiteboard: [c-n: baking for 1.9.1]
Comment 10•16 years ago
|
||
Verified fixed with:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090224 Minefield/3.2a1pre
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b3pre) Gecko/20090301 Shiretoko/3.1b3pre ID:20090301033810
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
Comment 11•16 years ago
|
||
Oh, could we somehow get this tested with the test plugin? Josh, would this be possible?
Flags: in-testsuite?
Comment 12•16 years ago
|
||
I'm not sure if it is possible to test, Masayuki would know. You'd probably have to generate a native key event from the test plugin, doesn't seem like it would be too hard.
Assignee | ||
Comment 13•16 years ago
|
||
How to write the plug-in tests? I don't know the "test plugin".
Comment 14•16 years ago
|
||
mozilla/modules/plugin/test/
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•