Bug 478862 After bug 347185 the keys Backspace and Tab no longer work as expected in a flash application r+sr=roc